--- a/main/html/content-areas/Format/Format.html
+++ b/main/html/content-areas/Format/Format.html
@@ -21,7 +21,7 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#section-">   </option>>
+            <option value="#.1.1-"> .1.1 -  </option>>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -30,7 +30,7 @@
     <main>
         <h2 class="heading">   </h2>
         
-        <h3 id="section-">   </h3>
+        <h3 id=".1.1"> .1.1 -  </h3>
         <p>
 
         </p>
