--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.10-robust-code/2.10-robust-code.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.10-robust-code/2.10-robust-code.html
@@ -15,7 +15,22 @@
             <h1>2.10 - Robust Code</h1>
         </div>
     </header>
-            <main>
+
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#section-2.10.1">2.10.1 - Characteristics of Robust Code</option>
+            <option value="#section-2.10.2">2.10.2 - Debugging: Process and Purpose</option>
+            <option value="#section-2.10.3">2.10.3 - Role of Debugging in Robust Solutions</option>
+            <option value="#section-2.10.4">2.10.4 - Locating Errors in Code</option>
+            <option value="#section-2.10.5">2.10.5 - Correcting Errors in Code</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+
+    <main>
         <section id="section-2.10.1">
             <h3 class="sub-heading">2.10.1 - Characteristics of Robust Code</h3>
             <p>Robust code is designed to handle errors and unexpected situations gracefully, preventing the program from crashing and providing meaningful feedback.</p>
@@ -91,5 +106,15 @@
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+    
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const section = document.getElementById('sections').value;
+            if (section) {
+                window.location.hash = section;
+            }
+        });
+    </script>
 </body>
 </html>
