--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.5-input-and-output/2.5-input-and-output.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.5-input-and-output/2.5-input-and-output.html
@@ -15,6 +15,21 @@
             <h1>2.5 - Input and Output</h1>
         </div>
     </header>
+
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#section-2.5.1">2.5.1 - Understand how to implement input and output</option>
+            <option value="#section-2.5.2">2.5.2 - Know and understand the use of text files for input and output</option>
+            <option value="#section-2.5.3">2.5.3 - Be able to interpret code using input and output</option>
+            <option value="#section-2.5.4">2.5.4 - Be able to create code using input and output</option>
+            <option value="#section-2.5.5">2.5.5 - Be able to debug code using input and output</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+
     <main>
         <section id="section-2.5.1">
             <h3 class="sub-heading">2.5.1 - Understand how to implement input and output</h3>
@@ -161,5 +176,15 @@ file.write("Hello")
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+    
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const section = document.getElementById('sections').value;
+            if (section) {
+                window.location.hash = section;
+            }
+        });
+    </script>
 </body>
 </html>
