--- a/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html
+++ b/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html
@@ -15,6 +15,20 @@
             <h1>3.1 - Impact of Digital Technologies</h1>
         </div>
     </header>
+
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#3.1.1">3.1.1 - Understand how the increased reliance on digital systems impacts organisational culture and society</option>
+            <option value="#3.1.2">3.1.2 - Understand the importance of digital inclusion</option>
+            <option value="#3.1.3">3.1.3 - Understand how end user characteristics affect the use of and inclusivity of digital systems</option>
+            <option value="#3.1.4">3.1.4 - Know and understand the benefits of professional development</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+
     <main>
         <section id="3.1.1">
         <h3 class="sub-heading">3.1.1 - Understand how the increased reliance on digital systems impacts organisational culture and society</h3>
@@ -390,5 +404,15 @@
             <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
             <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+    
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const section = document.getElementById('sections').value;
+            if (section) {
+                window.location.hash = section;
+            }
+        });
+    </script>
 </body>
 </html>
