--- a/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html
+++ b/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html
@@ -15,6 +15,18 @@
             <h1>3.2 - Emerging Technologies</h1>
         </div>
     </header>
+
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#3.2.1">3.2.1 - Understand how developments in technologies impact organisations, individuals and society</option>
+            <option value="#3.2.2">3.2.2 - Interrelationships Between Digital and Emerging Technologies</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+
     <main>
 
         <!-- 3.2.1 -->
@@ -468,6 +480,16 @@
             <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
             <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+    
+    <script>
+    document.querySelector('form').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const section = document.getElementById('sections').value;
+        if (section) {
+            window.location.hash = section;
+        }
+    });
+    </script>
 </body>
 </html>
 
