--- a/main/html/content-areas/CA5 - Business Context/subtopic/5.1-business-environment/5.1-business-environment.html
+++ b/main/html/content-areas/CA5 - Business Context/subtopic/5.1-business-environment/5.1-business-environment.html
@@ -17,10 +17,22 @@
         </div>
     </header>
 
+    <form>
+        <label for="sections">Jump to Section:</label>
+        <select name="sections" id="sections">
+            <option value="" disabled selected>Select a section</option>
+            <option value="#5.1.1">5.1.1 - Know the purpose and sectors of different types of organisations</option>
+            <option value="#5.1.2">5.1.2 - Know the names and definitions of different business models</option>
+            <option value="#5.1.3">5.1.3 - Know the different types of stakeholders</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+
     <main>
          <h2 class = "heading">Subtopic 5.1: Business Environment</h2>
 
-        <h3 class = "sub-heading">5.1.1 - Know the purpose and sectors of different types of organisations</h3>
+        <h3 class = "sub-heading" id="5.1.1">5.1.1 - Know the purpose and sectors of different types of organisations</h3>
 
         <h4>Purpose of the organisation:</h4>
 
@@ -65,7 +77,7 @@
             <ul>
             <p>Organisations where income is reinvested into their cause rather than distributed as profit.</p>
             </ul>
-        <h3 class = "sub-heading">5.1.2 - Know the names and definitions of different business models</h3>
+        <h3 class = "sub-heading" id="5.1.2">5.1.2 - Know the names and definitions of different business models</h3>
 
         <h4>Business to Customer (B2C)</h4>
             <h4>Definition:</h4>
@@ -109,10 +121,10 @@
                 <li>Requires managing different needs of two markets at the same time.</li>
             </ul>
 
-            <h3 class = "sub-heading">5.1.3 - Know the different types of stakeholders</h3>
+            <h3 class = "sub-heading" id="5.1.3">5.1.3 - Know the different types of stakeholders</h3>
 
             <h4>Internal Stakeholders:</h4>
-            <p>Individuals or groups within the organisation who have a direct interest in its success and operations.</p
+            <p>Individuals or groups within the organisation who have a direct interest in its success and operations.</p>
 
             <h4>Owners</h4>
             <ul>
@@ -186,5 +198,15 @@
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
     </footer>
+    
+    <script>
+        document.querySelector('form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const section = document.getElementById('sections').value;
+            if (section) {
+                window.location.hash = section;
+            }
+        });
+    </script>
 </body>
 </html>
